# users-also-buy

./: .gitignore  Makefile  main.py  pyproject.toml
src/: agent.py  azure_blob_client.py  data_models.py  embeddings.py  marketplacer_gateway.py  products_fetcher.py  search.py  typesense_connector.py
src/streamlit_app/: app.py
